# django-dynamic-storages

./: .flake8  .gitignore  LICENSE  README.md  manage.py  pyproject.toml  runtests.py
_test_project/: asgi.py  urls.py  wsgi.py
_test_project/settings/: __init__.py  test.py
dynamic_storages/: apps.py  conf.py  views.py
dynamic_storages/db/: fields.py
dynamic_storages/fields/: __init__.py  dynamic_storage.py  encrypted_content.py  encrypted_json.py
dynamic_storages/models/: __init__.py  abstract_storage_target.py  mappings.py
dynamic_storages/tests/: __init__.py  abstract.py  factories.py  models.py  test_factories.py  urls.py
dynamic_storages/tests/data/files/: 1  2  3  4  5
dynamic_storages/tests/data/sftp/: sftp-test  sftp-test-passphrase  sftp-test-passphrase.pub  sftp-test.pub
dynamic_storages/tests/fields/: test_dynamic_storage_fields.py  test_encrypted_fields.py  test_encrypted_json_field.py  util.py
dynamic_storages/tests/migrations/: 0001_initial.py  0002_testencryptedjsonfield.py  0003_auto_20201121_0302.py
dynamic_storages/tests/views/: test_basic.py  test_secure.py
