[tool.black]
line-length = 178
target-version = ['py33']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.poetry]
name = "django-dynamic-storages"
version = "0.5.3"
description = "A collection of file fields and associated components to allow for dynamic configuration of storage properties for file-based fields within Django models."
authors = ["Patrick McClory <patrick@mcclory.io>"]
license = "BSD-3-Clause"
packages = [
    { include = "dynamic_storages" },
]
readme = "README.md"
homepage = "https://github.com/mcclory/django-dynamic-storages"
repository = "https://github.com/mcclory/django-dynamic-storages"
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Django :: 3.1",
  "Intended Audience :: Developers",
  "Natural Language :: English"
]


[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.0"
django-storages = {extras = ["azure", "boto3", "dropbox", "google", "libcloud", "sftp"], version = "^1.10.1"}
django-fernet-fields = "^0.6"
django-appconf = "^1.0.4"
Pillow = "^8.0.0"
google-cloud = "^0.34.0"
apache-libcloud = "^3.2.0"
azure-storage-blob = ">=1.3.1,<12.0.0"
boto3 = "^1.16.8"
dropbox = "^10.8.0"
google-cloud-storage = "^1.32.0"
paramiko = "^2.7.2"
python-magic = "^0.4.18"
djangorestframework = "^3.12.2"

[tool.poetry.dev-dependencies]
factory-boy = "^3.1.0"
python-dotenv = "^0.14.0"
django-extensions = "^3.0.9"
django-test-plus = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
